k8s/microk8s/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-box-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-box-redis
  template:
    metadata:
      labels:
        app: memory-box-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "150m"
