k8s/microk8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-box-db
spec:
  selector:
    app: memory-box-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
