k8s/microk8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-box-redis
spec:
  selector:
    app: memory-box-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
