k8s/microk8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-box-back
spec:
  selector:
    app: memory-box-back
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
